# Robotic-Arm-Manipulator-using-ROS-2-and-Gazebo-simulation

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/arduinobot_bringup/share/ament_index/resource_index/parent_prefix_path/: arduinobot_bringup
install/arduinobot_bringup/share/arduinobot_bringup/: package.sh
install/arduinobot_controller/lib/arduinobot_controller/: slider_control
install/arduinobot_controller/share/arduinobot_controller/: local_setup.sh  package.sh
install/arduinobot_cpp_example/lib/arduinobot_cpp_example/: simple_action_client_node  simple_action_server_node  simple_moveit_interface  simple_publisher  simple_subscriber
install/arduinobot_cpp_example/share/ament_index/resource_index/package_run_dependencies/: arduinobot_cpp_example
install/arduinobot_cpp_example/share/ament_index/resource_index/parent_prefix_path/: arduinobot_cpp_example
install/arduinobot_cpp_example/share/arduinobot_cpp_example/: package.dsv  package.ps1  package.sh  package.xml
install/arduinobot_cpp_examples/lib/arduinobot_cpp_examples/: simple_action_client_node  simple_action_server_node  simple_lifecycle_node  simple_moveit_interface  simple_parameter  simple_publisher  simple_service_client  simple_service_server  simple_subscriber
install/arduinobot_cpp_examples/share/arduinobot_cpp_examples/: package.sh
install/arduinobot_description/share/arduinobot_description/: local_setup.sh  package.sh
install/arduinobot_description/share/arduinobot_description/launch/: gazebo.launch.py
install/arduinobot_description/share/arduinobot_description/urdf/: arduinobot.urdf copy.xacro  arduinobot.urdf.xacro
install/arduinobot_firmware/lib/arduinobot_firmware/: simple_serial_transmitter
install/arduinobot_firmware/share/arduinobot_firmware/: package.sh
install/arduinobot_moveit/share/ament_index/resource_index/parent_prefix_path/: arduinobot_moveit
install/arduinobot_moveit/share/arduinobot_moveit/: local_setup.sh  package.sh
install/arduinobot_moveit/share/arduinobot_moveit/config/: kinematic.yaml
install/arduinobot_msgs/share/arduinobot_msgs/: local_setup.sh  package.sh  package.xml
install/arduinobot_msgs/share/arduinobot_msgs/srv/: EulerToQuaternion.srv  EulerToQuaternion_Response.msg
install/arduinobot_py_example/lib/arduinobot_py_example/: simple_action_client  simple_action_server  simple_parameter  simple_publisher = arduinobot_py_example.simple_publisher:mainsimple_parameter  simple_publisher = arduinobot_py_example.simple_publisher:mainsimple_service_server  simple_publisher = arduinobot_py_example.simple_publisher:mainsimple_subscriber  simple_service_client  simple_service_server
install/arduinobot_py_example/share/arduinobot_py_example/: package.sh  package.xml
install/arduinobot_py_examples/share/arduinobot_py_examples/: package.sh
install/arduinobot_remote/lib/arduinobot_remote/: task_server_node
install/arduinobot_remote/share/arduinobot_remote/: local_setup.sh  package.sh  package.xml
install/arduinobot_utils/lib/arduinobot_utils/: angle_conversion
install/arduinobot_utils/share/arduinobot_utils/: local_setup.sh  package.sh
log/: latest_build  latest_list
src/arduinobot_controller/: package.xml
src/arduinobot_controller/config/: arduinobot_controllers.yaml
src/arduinobot_controller/launch/: controller.launch.py
src/arduinobot_cpp_example/: CMakeLists.txt
src/arduinobot_cpp_example/src/: simple_action_client.cpp  simple_action_server.cpp  simple_publisher.cpp  simple_subscriber.cpp
src/arduinobot_description/: package.xml
src/arduinobot_description/rviz/: display.rviz
src/arduinobot_firmware/firmware/simple_serial_receiver/: simple_serial_receiver.ino
src/arduinobot_moveit/: package.xml
src/arduinobot_msgs/: CMakeLists.txt
src/arduinobot_py_example/: setup.py
src/arduinobot_py_example/arduinobot_py_example/: simple_parameter.py  simple_service_client.py
src/arduinobot_py_examples/: package.xml
src/arduinobot_remote/: package.xml
src/arduinobot_remote/arduinobot_remote/: alexa_interface.py
src/arduinobot_utils/: package.xml
src/demo_robot/urdf/: demorobot.urdf  frames_2025-08-08_14.40.25.gv
